fixed some bugs causing issues with delete stage buttons in JS also tided up an issue in CSS for very large screens where cards were overflowing enough to push othercards out of position.

--- a/colourforge/static/css/style.css
+++ b/colourforge/static/css/style.css
@@ -895,6 +895,6 @@ button:hover,
 @media (min-width: 1468px) {
     /* Adjust card height and layout for large screens */
 	.recipe-cards .card {
-		min-height: 605px;
+		height: 605px;
 	}
 }
